--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
     <!-- Header with Carousel -->
     <header id="home">
         <div class="carousel">
-            <img src="beautiful-view-tree-with-red-leaves-lake-forest.jpg" alt="nature" class="active">
-            <img src="image2.jpg" alt="image2">
-            <img src="image3.jpg" alt="Image 3">
+            <img src="star.jpg" alt="star" class="active">
+            <img src="beautiful-view-tree-with-red-leaves-lake-forest.jpg" alt="nature">
         </div>
         <div class="description">
             <h1>Sahil Maharjan</h1>
